# cs170

./: .gitignore  README.md
project1/: ag_allDupsInQueue.txt  ag_dupsInExpand.txt  ag_dupsOnlyInExpand.txt  ag_expandtest.txt  ag_trace_upto20_desktop.txt  ag_traces_NOtieBreaking.txt  ag_traces_tieBreaking.txt  all_dupsInExpand.txt  all_solves_dupsInExpand.txt  all_solves_dupsInQueuing.txt  all_traces_desktop_solves.txt  allbackup.py  generic.py  main.py  newgeneric.py  notes.txt  tester.py  upto16OnDesktop.txt  upto16traceOnLaptop.txt
project2/: CS170_SMALLtestdata__72.txt  all_trace.txt  featuresearch.py  main.py  main.rs  rust_trace.txt  smallTest.txt  small_large_trace.txt  tester.py
project2/main/: Cargo.toml  all_rust_traces_unoptimized.txt  testingFile  testingFile.rs
project2/main/src/: main.rs
