[package]
name = "main"
version = "0.1.0"
authors = ["Anthony Hallak <ahall012@ucr.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "0.1.17", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
